# Twisted_ElGamal_PKE

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
common/: global.hpp  hash.hpp  print.hpp  routines.hpp
depends/: hash.hpp  print.hpp  routines.hpp
doc/: Twisted_ElGamal_Report.tex
global/: global.hpp
src/: calculate_dlog.hpp  elgamal_pke.hpp  fast_mul.hpp  twisted_elgamal.hpp  twisted_elgamal_pke.hpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake  make_test_elgamal.sh  make_test_new_feature.sh  make_test_twisted_elgamal.sh  test_elgamal  test_elgamal.cpp  test_new_feature  test_new_feature.cpp  test_twisted_elgamal  test_twisted_elgamal.cpp
